--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,13 +2,14 @@ body
 {
     color:#333;
     text-align: center;
-    font-family: "Helvetica";
+    font-family: "Arial";
 }
 
 #cabecera 
 {
-    backgroud: #33a;
-    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);    color:white;
+    background: #33a;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color:white;
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
